--- a/client/Book.css
+++ b/client/Book.css
@@ -8,13 +8,34 @@ ul{
 
 li{
     padding: 10px;
+    width: 250px;
+    max-width: 250px;
+    max-height: 400px;
 }
 
 .card{
-    margin: auto;
-    padding: 1rem;
-    width: 250px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     box-shadow: 5px 5px 10px #ccc;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+.card > img {
+    width: 100%;
+    height: 50%;
+}
+
+.card article {
+    padding: 5px;
+
+}
+
+.card h3{
+    margin: 0;
+    padding: 5px;
+}
+.card p {
+    padding: 3px;
+}
+
