--- a/client/public/Book.css
+++ b/client/public/Book.css
@@ -8,13 +8,14 @@ ul{
 
 li{
     padding: 10px;
+    width: 250px;
+    max-width: 250px;
+    max-height: 400px;
 }
 
 .card{
-    margin: auto;
-    padding: 1rem;
-    width: 250px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     box-shadow: 5px 5px 10px #ccc;
     align-items: center;
 }
